--- a/Desktop/weatherapp/weather/src/App.css
+++ b/Desktop/weatherapp/weather/src/App.css
@@ -4,3 +4,26 @@ body{
 .App {
   text-align: center;
 }
+
+.card-title {
+  position: absolute;
+  padding: 20px;
+}
+.card-date {
+  position: absolute;
+  padding-left: 20px;
+  margin-top: 60px;
+}
+
+.card-temperature {
+position: absolute;
+padding-left: 20px;
+margin-top: 260px;
+font-size: 50px;
+}
+
+.card-description {
+  position: absolute;
+  padding-left: 20px;
+  margin-top: 320px;
+}
