--- a/Desktop/weatherapp/weather/src/App.css
+++ b/Desktop/weatherapp/weather/src/App.css
@@ -5,25 +5,54 @@ body{
   text-align: center;
 }
 
-/* .card-title {
-  position: absolute;
-  padding: 20px;
-}
-.card-date {
-  position: absolute;
-  padding-left: 20px;
-  margin-top: 100px;
+@import url('https://fonts.googleapis.com/css?family=Source+Code+Pro:200');
+
+body  {
+    background-image: url('https://static.pexels.com/photos/414171/pexels-photo-414171.jpeg');
+  background-size:cover;
+        -webkit-animation: slidein 100s;
+        animation: slidein 100s;
+
+        -webkit-animation-fill-mode: forwards;
+        animation-fill-mode: forwards;
+
+        -webkit-animation-iteration-count: infinite;
+        animation-iteration-count: infinite;
+
+        -webkit-animation-direction: alternate;
+        animation-direction: alternate;              
 }
 
-.card-temperature {
-position: absolute;
-padding-left: 20px;
-margin-top: 260px;
-font-size: 50px;
+@-webkit-keyframes slidein {
+from {background-position: top; background-size:3000px; }
+to {background-position: -100px 0px;background-size:2750px;}
 }
 
-.card-description {
+@keyframes slidein {
+from {background-position: top;background-size:3000px; }
+to {background-position: -100px 0px;background-size:2750px;}
+
+}
+
+
+
+.center
+{
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: absolute;
-  padding-left: 20px;
-  margin-top: 320px;
-} */
+  margin: auto;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(75, 75, 250, 0.3);
+  border-radius: 3px;
+}
+.center h1{
+  text-align:center;
+  color:white;
+  font-family: 'Source Code Pro', monospace;
+  text-transform:uppercase;
+}
